2005-07-12  Kazuhiko  <kazuhiko@fdiary.net>
	* hiki-mode.el: support login and logout (by Takeshi UME Imai).

2005-07-09  Kouhei Yanagita <sugi@dream.big.or.jp>
	* style/default/html_formatter.rb: fixed: a block plugin preceding
	a heading level 1 (!) makes markup wrong.
	* theme/hiki/hiki.css: widen padding-bottom of 'div.body h3'.

2005-07-08  Kouhei Yanagita <sugi@dream.big.or.jp>
	* hiki/config.rb (load_messages): change name from guess_lang.
	use all values in HTTP_ACCEPT_LANGUAGE. use 'en' as @lang when
	resources of the acceptable languages is not found.
	set @lang in this function instead of load().

2005-07-08  Kazuhiko  <kazuhiko@fdiary.net>
	* messages/fr.rb, messages/it.rb (msg_login_failure): add a
	missing 'end'.
	* hiki/config.rb (guess_lang): add a new method to detect
	browsers' accept languages.

2005-07-06  Kouhei Yanagita <sugi@dream.big.or.jp>
	* misc/i18n/hikiconf.rb.sample.en: add a setting of @base_url.

2005-07-06  Kazuhiko  <kazuhiko@fdiary.net>
	* misc/plugin/attach/attach.rb: export 'attach_form' method
	(reported by Fu).

2005-07-05  Kazuhiko  <kazuhiko@fdiary.net>
	* hiki/db/flatfile.rb (store): ignore Errno::EPERM in File::utime
	(reported by hashi).

	* hiki/command.rb (cmd_save): always save the 'editor' attribute.

2005-07-04  Kazuhiko  <kazuhiko@fdiary.net>
	* hiki/pluginutil.rb (apply_plugin): catch all exceptions
	(reported by Kouhei Sutou).

	* style/default/html_formatter.rb (token_to_s): always use the
	'plugin_error' method (reported by Kouhei Sutou).

	* style/default/html_formatter.rb (toc): return more simple HTML.

	* hiki/util.rb (plugin_error): escape exception messages (reported
	by Kouhei Sutou).

2005-07-03  Kouhei Yanagita <sugi@dream.big.or.jp>
	* style/default/html_formatter.rb (token_to_s): a double quote for
	colspan is lacked.

2005-07-02  Kazuhiko  <kazuhiko@fdiary.net>
	* template/adminform.html: revise HTML (reported by Fu).

2005-07-01  Kazuhiko  <kazuhiko@fdiary.net>